# enigma-optima

./: .gitignore  .gitmodules  .hgignore  CHANGELOG.txt  CMakeLists.txt  INSTALL.txt  LICENSE.txt  Makefile  ModMath.c  ModMath.h  README.txt  REFERENCES.txt  banner.c  banner.h  charmap.c  charmap.h  cipher.c  cipher.h  cipher_inlines.h  ciphertext.c  ciphertext.h  common.h  conf-cc  conf-ld  cpu.c  cpu.h  date.c  date.h  dict.c  dict.h  display.c  display.h  eclient-XP-Home-install.bat  eclient-XP-Pro-install.bat  enigma-optima.workspace  enigma.c  error.c  error.h  global.h  hillclimb.c  (+46 more)
benchmark/: 00bigr.cur  00trigr.AVv1  00unigr.AVv1  AlignedAllocationTrait.h  CMakeLists.txt  MessageAndKeyBasedFixture.cpp  MessageAndKeyBasedFixture.h  biscore.tests.cpp  cipherAvx2_ni.c  cipherAvx2_ni.h  cipherAvx_ni.c  cipherAvx_ni.h  cipherNoInterleave_ni.c  cipherNoInterleave_ni.h  cipherSimple_ni.c  cipherSimple_ni.h  cipherSse2_ni.c  cipherSse2_ni.h  cipherSsse3_ni.c  cipherSsse3_ni.h  computeTriscoreAvx.tests.cpp  computeTriscoreAvx2.tests.cpp  computeTriscoreSsse3.tests.cpp  compute_biscore.tests.cpp  compute_icscore.tests.cpp  compute_triscore.tests.cpp  compute_uniscore.tests.cpp  decode.tests.cpp  decoding.tests.cpp  enigmaError.c  icscore.tests.cpp  main.cpp  scrambler_state.benchmark.cpp  sourceList.cmake  triscore.tests.cpp  uniscore.tests.cpp
benchmark/load/: str_dict.cpp  str_dict.hpp  strload_error.hpp
libEnigma/: CMakeLists.txt  commonSources.cmake
libEnigma/include/: ModMath.h  SwMode.h  character_encoding.h  charmap.h  cipher.h  cipher_inlines.h  ciphertext.h  common.h  computeScoreNoInterleave.h  cpu.h  date.h  dict.h  error.h  global.h  hillclimb.h  hillclimb2.h  input.h  key.h  optimizer.h  randomNumbers.h  result.h  resume_in.h  resume_out.h  scan.h  score.h  scoreBasic.h  scoreNoInterleave.h  scoreNoInterleave_inlines.h  scoreSimple.h  score_inlines.h  state.h  stecker.h
libEnigma/include/OS/: Os.h
libEnigma/include/config/: array_sizes.h  testing.h  types.h
libEnigma/include/dicts/: dict_builder.hpp  dict_builders.hpp  dict_loader.hpp  file_dict_loader.hpp  string_dict_loader.hpp
libEnigma/include/echar/: echar.h  echar_avx2.h  echar_data.h  echar_delta.h  echar_delta_data.h  echar_ssse3.h  turnover.h  turnover_data.h
libEnigma/include/iterators/: mesg_iterator.h  ring_iterator.h  ringstellung_iterator.h  slot_iterator.h  ukw_iterator.h
libEnigma/include/stbrett/: krah_optimizer.h  optimizer.h  ve3nea_optimizer.h
libEnigma/include/x86/: cipherAvx2.h  cipherAvx2_inlines.h  cipherSsse3.h  cipherSsse3_inlines.h  computeScoreAvx2.h  computeScoreSse2.h  computeScoreSse2Vex.h  computeScoreSsse3.h  computeScoreSsse3Vex.h  decodeMessageAvx2.h  decodeMessageSsse3.h  decodeMessageSsse3Vex.h  scoreAvx.h  scoreAvx2.h  scoreSsse3.h  vectorsAvx2.h
libEnigma/src/: ModMath.c  charmap.c  cipher.c  ciphertext.c  computeScoreNoInterleave.c  cpu.c  dict.c  dict_load.c  dict_load.cpp  hillclimb.c  hillclimb2.c  input.c  key.c  load_ciphertext.c  optimizer.c  randomNumbers.Linux.c  randomNumbers.Windows.c  randomNumbers.c  result.c  resume_in.c  resume_out.c  score.c  scoreBasic.c  scoreNoInterleave.c  scoreSimple.c  state.c  stecker.c
libEnigma/src/dicts/: dict_builders.cpp  dict_loader.cpp  string_dict_loader.cpp
libEnigma/src/echar/: echar_delta.c
libEnigma/src/iterators/: slot_iterator.c
libEnigma/src/stbrett/: krah_optimizer.c  ve3nea_optimizer.c
libEnigma/src/x86/: cipherAvx2.c  cipherSsse3.c  computeScoreAvx2.c  computeScoreSse2.c  computeScoreSse2Vex.c  computeScoreSse2_inlines.h  computeScoreSsse3.c  computeScoreSsse3Vex.c  computeScoreSsse3_inlines.h  decodeMessageAvx2.c  decodeMessageSsse3.c  decodeMessageSsse3Vex.c  decodeMessageSsse3_inlines.h  scoreAvx.c  scoreAvx2.c  scoreFunctionAvx.c  scoreFunctionAvx2.c  scoreFunctionSsse3.c  scoreSsse3.c
optima/: CMakeLists.txt  banner.c  enigma.c
optima/config/: releaseVersion.cpp  releaseVersion.cpp.in  releaseVersion.gen.hpp.in  releaseVersion.h
tests/: CMakeLists.txt  GetRSeed.tests.cpp  character_encoding.tests.cpp  cipher.tests.cpp  enigma-optima.tests.cbp
tests/data/: CMakeLists.txt  benchmark_cipher_pbnxa.S  bigraph.1941.S  bigraph.cur.S  resource_template.s  trigraph.1941.S  trigraph.AVv1.S  trigraph.cur.S  unigraph.AVv1.S
tests/data/blobs/: benchmark_cipher_pbnxa  trigr.1941
tests/echar/: echar.tests.cpp  turnover.tests.cpp  v16_echar.with.PermutationMap_t.tests.cpp  v16_echar.with.v16_echar_delta.tests.cpp  v16_echar_delta.tests.cpp  v32_echar.with.PermutationMap_t.tests.cpp  v32_echar.with.v32_echar_delta.tests.cpp  v32_echar_delta.tests.cpp
tests/heavy_integration/: CMakeLists.txt  DictsPolicy.cpp  DictsPolicy.hpp  ExpectedKey.cpp  ExpectedKey.hpp  HillclimbAssertions.hpp  HillclimbTest.hpp  HillclimbTestBase.cpp  HillclimbTestBase.hpp  Hillclimb_PBNXA.cpp  Hillclimb_PBNXA.hpp  Krah1941Policies.hpp  Ve3neaAv1Policies.hpp  win_bench_pbnxa.cpp
tests/unit/: AlignedAllocationTrait.hpp  CMakeLists.txt  computeScoreNoInterleave.cpp  cpuFeatures.hpp  enigma_error.cpp  string_dict_loader.tests.cpp  test_data.tests.cpp
tests/unit/cipher.c/: scrambler_state.tests.cpp
tests/unit/echar/: echar.cmake  echar.tests.cpp  echar.with.echar_delta.tests.cpp  echar_delta.tests.cpp  turnover.with.echar_delta.tests.cpp  v16_echar.with.PermutationMap_t.tests.cpp  v16_echar.with.v16_echar_delta.tests.cpp  v16_echar_delta.tests.cpp  v32_echar.with.PermutationMap_t.tests.cpp  v32_echar.with.v32_echar_delta.tests.cpp  v32_echar_delta.tests.cpp  v_tools.hpp
tests/unit/hillclimb.c/: hillclimb.tests.cpp
tests/unit/input.c/: set_RingsState.tests.cpp  set_ring.tests.cpp  set_stecker.tests.cpp  set_ukw.tests.cpp
tests/unit/iterators/: mesg_iterator.tests.cpp  ringstellung_iterator.tests.cpp  slot_iterator.tests.cpp  ukw_iterator.tests.cpp
tests/unit/key.c/: Key_equ.tests.cpp  UkwType_to_ALPHA.tests.cpp
tests/unit/x86/: computeScore.tests.cpp  x86.cmake  (+1 more)
tests/x86/: computeScore.tests.cpp  computeScore.tests.hpp  computeScoreAvx2.tests.cpp  computeScoreSse2.tests.cpp  vectorsAvx2.tests.cpp  x86.cmake
(+91 files in other folders)
